added composer require firebase jwt

--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "ext-http": "*",
         "anandsiddharth/laravel-paytm-wallet": "^2.0",
         "dipesh79/laravel-phonepe": "*",
         "dipokhalder/laravel-env-editor": "^1.0",
         "doctrine/dbal": "^3.7",
+        "firebase/php-jwt": "^6.10",
         "guzzlehttp/guzzle": "^7.2",
         "karim007/laravel-bkash-tokenize": "^2.2",
         "kingflamez/laravelrave": "^4.2",
@@ -27,7 +27,6 @@
         "smartisan/laravel-settings": "^2.0",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.10",
-        "srmklive/paypal": "~3.0",
         "staudenmeir/laravel-adjacency-list": "^1.0",
         "stripe/stripe-php": "^12.7",
         "twilio/sdk": "^7.9",
